# mau-server

./: .env.dist  README.md  pyproject.toml
mau_server/: __init__.py  config.py  main.py  models.py
mau_server/routers/: __init__.py  game.py  leaaderboard.py  roomlist.py  users.py
mau_server/schemes/: db.py  game.py  roomlist.py
mau_server/services/: events.py  game_context.py  token.py
