[project]
name = "mau_server"
version = "2.0"
description = "A web server with extra things for Mau engine."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "mau",
    "pydantic-settings>=2.9.1",
    "tortoise-orm>=0.25.0",
    "uvicorn>=0.34.2",
    "websockets>=15.0.1",
]

[tool.uv.sources]
mau = { git = "https://github.com/miroqru/mauno" }
